feat: create FileController with s3 for aws
