# src/controllers/EvalutionController.js
@@ -3,8 +3,7 @@ const db = require('../models')
 class EvalutionController {
     static async register(request, response) {
         try {
-            const { title, description, rating, iduser, idstore, idstoreproduct } = request.body
-            const { filename1, filename2, filename3 } = request.files
+            const { title, description, rating, iduser, idstore, idstoreproduct, images } = request.body
 
             if (!title || !description || !rating || !iduser || (!idstore && !idstoreproduct)) {
                 return response.status(400).json({ success: false, message: 'Fields is missing!' })
@@ -19,48 +18,14 @@ class EvalutionController {
             const storeproduct = idstoreproduct ? await db.StoreProduct.findOne({ where: { id: idstoreproduct } }) : true
             if (!storeproduct) return response.status(404).json({ success: false, message: 'Product not found!' })
 
-            let base64_file1, base64_file2, base64_file3
-
-            if (filename1) {
-                base64_file1 = Buffer.from(fs.readFileSync(filename1.path)).toString('base64')
-
-                fs.unlink(filename1.path, (error) => {
-                    if (error) throw error
-                    console.log(`${filename1.path} has been deleted!`)
-                })
-            }
-
-            if (filename2) {
-                base64_file2 = Buffer.from(fs.readFileSync(filename2.path)).toString('base64')
-
-                fs.unlink(filename2.path, (error) => {
-                    if (error) throw error
-                    console.log(`${filename2.path} has been deleted!`)
-                })
-            }
-
-            if (filename3) {
-                base64_file3 = Buffer.from(fs.readFileSync(filename3.path)).toString('base64')
-
-                fs.unlink(filename3.path, (error) => {
-                    if (error) throw error
-                    console.log(`${filename3.path} has been deleted!`)
-                })
-            }
-
             const data = await db.sequelize.transaction(async (t) => {
 
                 const evaluation = await db.Evalution.create({
                     title, description, rating, iduser, idstore, idstoreproduct
                 }, { transaction: t })
 
-                if (filename1 || filename2 || filename3) {
-                    await db.Annex.create({
-                        filename1: filename1 ? base64_file1 : null,
-                        filename2: filename2 ? base64_file2 : null,
-                        filename3: filename3 ? base64_file3 : null,
-                        idevaluation: evaluation.id
-                    }, { transaction: t })
+                if (images && images.length > 0) {
+                    await db.Annex.bulkCreate(images.map(image => ({ image, idevaluation: evaluation.id })), { transaction: t })
                 }
 
                 if (store) {
